--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="header__container container">
                 <div class="header__inner">
                     <a class="header__logo" href="#">
-                        <img src="assets/images/logo-header.png" alt="logo">
+                        <img src="assets/images/logo.svg" alt="logo" width="220px" height="60px">
                     </a>
                     <div class="header__right">
                         <div class="header__contact  contact">
@@ -383,7 +383,7 @@
             <div class="footer__container container">
                 <div class="footer__top">
                     <a class="footer__logo" href="#">
-                        <img class="" src="assets/images/logo-footer.png" alt="">
+                        <img src="assets/images/logo.svg" alt="logo" width="300px" height="60px">
                     </a>
                     <div class="footer__left">
                         <div class="footer__contact  contact">
