--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <section class="price">
                 <div class="price__container container">
                     <div class="price__header">
-                        <h2 class="price__title  section-title">
+                        <h2 class="price__title  section-title  section-title--icon-top">
                             <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
                             услуги и стоимость
                         </h2>
@@ -214,7 +214,7 @@
 
             <section class="clients">
                 <div class="clients__container container">
-                    <h2 class="clients__title  section-title">
+                    <h2 class="clients__title  section-title  section-title--icon-top">
                         <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
                         наши четвероногие гости
                     </h2>
@@ -329,22 +329,26 @@
 
             <section class="diplomas">
                 <div class="diplomas__container container">
-                    <div class="diplomas__header">
-                        <h2 class="diplomas__title  section-title">
-                            <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
-                            Сертификаты и дипломы
-                        </h2>
-                    </div>
+                    <h2 class="diplomas__title  section-title  section-title--icon-top">
+                        <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
+                        Сертификаты и дипломы
+                    </h2>
                     <div class="swiper diplomas__swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img class="diplomas__img" src="assets/images/diplomas/1.jpg" alt="diplom">
+                                <div class="diplomas__image">
+                                    <img class="diplomas__img" src="assets/images/diplomas/1.jpg" alt="diplom">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img class="diplomas__img" src="assets/images/diplomas/2.jpg" alt="diplom">
+                                <div class="diplomas__image">
+                                    <img class="diplomas__img" src="assets/images/diplomas/1.jpg" alt="diplom">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img class="diplomas__img" src="assets/images/diplomas/3.jpg" alt="diplom">
+                                <div class="diplomas__image">
+                                    <img class="diplomas__img" src="assets/images/diplomas/1.jpg" alt="diplom">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
@@ -365,12 +369,10 @@
             <section class="wiki-groom">
                 <div class="wiki-groom__container container">
                     <div class="wiki-groom__inner">
-                        <div class="wiki-groom__mobail">
-                            <h2 class="wiki-groom__title  section-title">
-                                <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
-                                вики грум
-                            </h2>
-                        </div>
+                        <h2 class="wiki-groom__title-mobail  section-title  section-title--icon-top">
+                            <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
+                            вики грум
+                        </h2>
                         <div class="wiki-groom__image">
                             <img class="wiki-groom__img" src="assets/images/wiki/wg.jpg" alt="">
                         </div>
@@ -402,7 +404,7 @@
                 <div class="reviews__container container">
                     <div class="reviews__inner">
                         <div class="reviews__header">
-                            <h2 class="reviews__title  section-title">
+                            <h2 class="section-title  section-title--icon-top">
                                 <img class="section-title__icon" src="assets/images/header/lap.svg" alt="lap">
                                 Отзывы о нас
                             </h2>
