--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header" id="header">
             <div class="header__container container">
                 <div class="header__inner">
                     <a class="header__logo" href="#">
